Splash page - Fix alignment and text sizing

--- a/sites/messages.scss
+++ b/sites/messages.scss
@@ -40,28 +40,18 @@
 
 		.btn {
 			box-shadow: 0 4px #ddd;
-			margin: 35px 0 14px;
+			margin-bottom: 14px;
+			margin-top: 35px;
 			min-width: 110px;
 
-			@media (min-width: 768px) {
-				box-shadow: 0 4px #ddd;
-				margin: 35px 0 14px;
-				min-width: 110px;
-			}
-
 			@media (min-width: 992px) {
-				box-shadow: 0 4px #ddd;
-				margin: 35px 0 14px;
 				min-width: 138px;
 				padding: .5em 1.5em;
 			}
+		}
 
-			@media (min-width: 1200px) {
-				box-shadow: 0 4px #ddd;
-				margin: 35px 0 14px;
-				min-width: 138px;
-				padding: .5em 1.5em;
-			}
+		.hght-inhrt + p .btn {
+			margin-top: 10px;
 		}
 	}
 
@@ -91,7 +81,7 @@
 
 		@media (min-width: 768px) {
 			margin: 50px auto;
-			width: 300px;
+			width: 400px;
 		}
 
 		@media (min-width: 992px) {
@@ -99,10 +89,6 @@
 			width: 500px;
 		}
 
-		@media (min-width: 1200px) {
-			margin: 175px auto;
-			width: 500px;
-		}
 	}
 
 	.sp-bx-bt {
@@ -124,6 +110,7 @@
 			padding: 30px 30px 13px;
 		}
 	}
+
 }
 
 // Error messages styles
